test/errors/e17.gm
Procedure foo()
{
  Graph G;
  Node(G) x;
  N_P<Int>(G) A;
  Int z; z = 0;
  Foreach (n: G.Nodes)
  {
      z += n.A @ x; // x is not an iterator
  }
}
